[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/boombox.gd" type="Script" id=1]
[ext_resource path="res://sprites/boombox.png" type="Texture" id=2]
[ext_resource path="res://scenes/marker.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 100.0

[node name="boombox" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )
one_way_collision = true

[node name="Sprite" type="Sprite" parent="Area2D"]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="marker" parent="." instance=ExtResource( 3 )]

[node name="lifetime" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="note" type="VisibilityNotifier2D" parent="."]
rect = Rect2( 0, -18.182, 1, 1 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="lifetime" to="." method="_on_lifetime_timeout"]
